# Kenya_tech_career_compass

./: .gitignore  README.md  debug_data.py  main.py  pyproject.toml  run_scraper.py
data/processed/: jobs_cleaned.csv  skill_cooccurrence.csv  skill_cooccurrence_hard_skills.csv  skills_summary.csv  skills_v2.csv
data/raw/: jobs.csv  requirements.csv  scrape_logs.csv  skills.csv
database/: __init__.py  db_manager.py
scrapers/: __init__.py  base_scraper.py  brightermonday.py  myjobmag.py  oyk.py
src/: __init__.py  data_processor.py  export_db.py  skill_extractor.py  skills_config.py
src/dashboard/: app.py
utils/: config.py  helpers.py  nlp_processor.py
